// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots views/routes/user/Profile default 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="generic-view-container  p-12 p-sm-10 p-md-10 p-xl-8 p-d-flex p-flex-column p-as-center p-mx-auto"
  >
    <div
      class="lck-color-primary p-my-4"
    >
      <h1>
        My account
      </h1>
    </div>
     
    <section
      class="p-mb-4"
    >
      <div
        class="p-card p-component"
      >
        <!---->
         
        <div
          class="p-card-body"
        >
          <div
            class="p-card-title"
          >
            <span
              class="icon-rounded"
            >
              <i
                class="pi pi-user"
              />
            </span>
             My profile
      
          </div>
           
          <!---->
           
          <div
            class="p-card-content"
          >
            
        No data to display
      
          </div>
           
          <!---->
        </div>
      </div>
    </section>
     
    <section
      class="p-mb-4"
    >
      <div
        class="p-card p-component"
      >
        <!---->
         
        <div
          class="p-card-body"
        >
          <div
            class="p-card-title"
          >
            <span
              class="icon-rounded"
            >
              <i
                class="pi pi-users"
              />
            </span>
             My groups
      
          </div>
           
          <!---->
           
          <div
            class="p-card-content"
          >
            
        No data to display
      
          </div>
           
          <!---->
        </div>
      </div>
    </section>
     
    <section
      class="p-mb-4"
    >
      <div
        class="p-card p-component"
      >
        <!---->
         
        <div
          class="p-card-body"
        >
          <div
            class="p-card-title"
          >
            <span
              class="icon-rounded"
            >
              <i
                class="pi pi-envelope"
              />
            </span>
             Update email
      
          </div>
           
          <!---->
           
          <div
            class="p-card-content"
          >
            
        No data to display
      
          </div>
           
          <!---->
        </div>
      </div>
    </section>
     
    <section
      class="p-mb-4"
    >
      <div
        class="p-card p-component"
      >
        <!---->
         
        <div
          class="p-card-body"
        >
          <div
            class="p-card-title"
          >
            <span
              class="icon-rounded"
            >
              <i
                class="pi pi-lock"
              />
            </span>
             Update my password
      
          </div>
           
          <!---->
           
          <div
            class="p-card-content"
          >
            
        No data to display
      
          </div>
           
          <!---->
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`storyshots views/routes/user/Profile with auth user 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="generic-view-container  p-12 p-sm-10 p-md-10 p-xl-8 p-d-flex p-flex-column p-as-center p-mx-auto"
  >
    <div
      class="lck-color-primary p-my-4"
    >
      <h1>
        My account
      </h1>
    </div>
     
    <section
      class="p-mb-4"
    >
      <div
        class="p-card p-component"
      >
        <!---->
         
        <div
          class="p-card-body"
        >
          <div
            class="p-card-title"
          >
            <span
              class="icon-rounded"
            >
              <i
                class="pi pi-user"
              />
            </span>
             My profile
      
          </div>
           
          <!---->
           
          <div
            class="p-card-content"
          >
            
        No data to display
      
          </div>
           
          <!---->
        </div>
      </div>
    </section>
     
    <section
      class="p-mb-4"
    >
      <div
        class="p-card p-component"
      >
        <!---->
         
        <div
          class="p-card-body"
        >
          <div
            class="p-card-title"
          >
            <span
              class="icon-rounded"
            >
              <i
                class="pi pi-users"
              />
            </span>
             My groups
      
          </div>
           
          <!---->
           
          <div
            class="p-card-content"
          >
            
        No data to display
      
          </div>
           
          <!---->
        </div>
      </div>
    </section>
     
    <section
      class="p-mb-4"
    >
      <div
        class="p-card p-component"
      >
        <!---->
         
        <div
          class="p-card-body"
        >
          <div
            class="p-card-title"
          >
            <span
              class="icon-rounded"
            >
              <i
                class="pi pi-envelope"
              />
            </span>
             Update email
      
          </div>
           
          <!---->
           
          <div
            class="p-card-content"
          >
            
        No data to display
      
          </div>
           
          <!---->
        </div>
      </div>
    </section>
     
    <section
      class="p-mb-4"
    >
      <div
        class="p-card p-component"
      >
        <!---->
         
        <div
          class="p-card-body"
        >
          <div
            class="p-card-title"
          >
            <span
              class="icon-rounded"
            >
              <i
                class="pi pi-lock"
              />
            </span>
             Update my password
      
          </div>
           
          <!---->
           
          <div
            class="p-card-content"
          >
            
        No data to display
      
          </div>
           
          <!---->
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`storyshots views/routes/user/Profile with auth user and groups 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="generic-view-container  p-12 p-sm-10 p-md-10 p-xl-8 p-d-flex p-flex-column p-as-center p-mx-auto"
  >
    <div
      class="lck-color-primary p-my-4"
    >
      <h1>
        My account
      </h1>
    </div>
     
    <section
      class="p-mb-4"
    >
      <div
        class="p-card p-component"
      >
        <!---->
         
        <div
          class="p-card-body"
        >
          <div
            class="p-card-title"
          >
            <span
              class="icon-rounded"
            >
              <i
                class="pi pi-user"
              />
            </span>
             My profile
      
          </div>
           
          <!---->
           
          <div
            class="p-card-content"
          >
            <h4>
              Mathieu DARTIGUES
            </h4>
             
            <strong>
              E-mail: 
            </strong>
            mathieu.dartigues@makina-corpus.com
        
            <br />
             
            <strong>
              Role: 
            </strong>
            SUPERADMIN
      
          </div>
           
          <!---->
        </div>
      </div>
    </section>
     
    <section
      class="p-mb-4"
    >
      <div
        class="p-card p-component"
      >
        <!---->
         
        <div
          class="p-card-body"
        >
          <div
            class="p-card-title"
          >
            <span
              class="icon-rounded"
            >
              <i
                class="pi pi-users"
              />
            </span>
             My groups
      
          </div>
           
          <!---->
           
          <div
            class="p-card-content"
          >
            
        No data to display
      
          </div>
           
          <!---->
        </div>
      </div>
    </section>
     
    <section
      class="p-mb-4"
    >
      <div
        class="p-card p-component"
      >
        <!---->
         
        <div
          class="p-card-body"
        >
          <div
            class="p-card-title"
          >
            <span
              class="icon-rounded"
            >
              <i
                class="pi pi-envelope"
              />
            </span>
             Update email
      
          </div>
           
          <!---->
           
          <div
            class="p-card-content"
          >
            <div>
              <form
                class="p-fluid"
              >
                <div
                  class="p-field p-grid"
                >
                  <label
                    class="label-field-required p-col-12 p-mb-2 p-md-4 p-mb-md-0"
                    for="newEmail"
                  >
                    
              New email
            
                  </label>
                   
                  <div
                    class="p-col-12 p-md-8"
                  >
                    <input
                      class="p-inputtext p-component"
                      id="newEmail"
                      placeholder="Email"
                      type="email"
                    />
                  </div>
                   
                  <span
                    class="p-my-2 untouched pristine"
                  >
                    
                  </span>
                </div>
                 
                <div
                  class="p-field p-grid p-mb-4 p-mt-2"
                >
                  <label
                    class="label-field-required p-col-12 p-mb-2 p-md-4 p-mb-md-0"
                    for="password"
                  >
                    
              Current password
            
                  </label>
                   
                  <div
                    class="p-col-12 p-md-8"
                  >
                    <div
                      class="p-password p-component p-inputwrapper"
                      id="password"
                    >
                      <input
                        class="p-inputtext p-component p-password-input"
                        id="password"
                        type="password"
                      />
                       
                      <!---->
                       
                      <!---->
                    </div>
                  </div>
                   
                  <span
                    class="p-my-2 untouched pristine"
                  >
                    
                  </span>
                </div>
                 
                <div
                  class="p-text-error"
                >
                  <!---->
                </div>
                 
                <div
                  class="lck-form-footer"
                >
                  <!---->
                   
                  <button
                    class="p-button p-component"
                    disabled="disabled"
                    type="submit"
                  >
                    <span
                      class="pi pi-save p-button-icon p-button-icon-left"
                    />
                     
                    <span
                      class="p-button-label"
                    >
                      Save
                    </span>
                     
                    <!---->
                    <span
                      class="p-ink"
                    />
                  </button>
                </div>
              </form>
            </div>
          </div>
           
          <!---->
        </div>
      </div>
    </section>
     
    <section
      class="p-mb-4"
    >
      <div
        class="p-card p-component"
      >
        <!---->
         
        <div
          class="p-card-body"
        >
          <div
            class="p-card-title"
          >
            <span
              class="icon-rounded"
            >
              <i
                class="pi pi-lock"
              />
            </span>
             Update my password
      
          </div>
           
          <!---->
           
          <div
            class="p-card-content"
          >
            <div
              class="p-field p-grid p-mb-3"
            >
              <label
                class="p-col p-md-3"
                for="oldPassword"
              >
                
            Old password
          
              </label>
               
              <div
                class="p-col p-md-3"
              >
                <input
                  class="p-inputtext p-component"
                  id="oldPassword"
                  type="password"
                />
              </div>
            </div>
             
            <div
              class="p-field p-grid p-mb-3"
            >
              <div
                class="p-d-flex p-md-12"
              >
                <label
                  class="p-col p-md-3"
                  for="password"
                >
                  
              New password
            
                </label>
                 
                <div
                  class="p-col p-md-3"
                >
                  <div
                    aria-describedby="password-rules"
                    class="p-password p-component p-inputwrapper"
                    id="password"
                  >
                    <input
                      aria-describedby="password-rules"
                      class="p-inputtext p-component p-password-input"
                      id="password"
                      type="password"
                    />
                     
                    <!---->
                     
                    <!---->
                  </div>
                </div>
              </div>
               
              <small
                class="p-text-italic"
                id="password-rules"
              >
                
            Must contain at least 8 characters, 1 uppercase, 1 lowercase, 1 digit and 1 special character.
          
              </small>
            </div>
             
            <div
              class="p-field p-grid"
            >
              <label
                class="p-col p-md-3"
                for="passwordCheck"
              >
                
            Password (check)
          
              </label>
               
              <div
                class="p-col p-md-3"
              >
                <input
                  class="p-inputtext p-component"
                  id="passwordCheck"
                  type="password"
                />
              </div>
            </div>
             
            <div
              class="p-text-error"
            >
              <!---->
               
              <!---->
               
              <!---->
            </div>
          </div>
           
          <div
            class="p-card-footer"
          >
            <div
              class="p-field p-grid p-jc-end"
            >
              <button
                class="p-button p-component"
                disabled="disabled"
                type="button"
              >
                <span
                  class="pi pi-save p-button-icon p-button-icon-left"
                />
                 
                <span
                  class="p-button-label"
                >
                  Save
                </span>
                 
                <!---->
                <span
                  class="p-ink"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;
